--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11270,13 +11270,13 @@ textarea.form-control-lg {
     display: table-row !important;
   }
 
-  .d-print-table-cell {
-    display: table-cell !important;
-  }
+    .d-print-table-cell {
+        display: table-cell !important;
+    }
 
-  .d-print-flex {
-    display: flex !important;
-  }
+    .d-print-flex {
+        display: flex !important;
+    }
 
     .d-print-inline-flex {
         display: inline-flex !important;
@@ -11286,7 +11286,6 @@ textarea.form-control-lg {
         display: none !important;
     }
 }
-
 .card-hover {
     box-shadow: 0 0 0;
     transition-duration: 0.1s;
@@ -11493,7 +11492,6 @@ textarea.form-control-lg {
         margin-top: 0;
     }
 }
-
 .flex-view {
     display: flex;
 }
@@ -11533,6 +11531,30 @@ textarea.form-control-lg {
     cursor: pointer;
 }
 
+.pointer-no-drop {
+    cursor: no-drop;
+}
+
+.pointer-default {
+    cursor: default;
+}
+
+.pointer-default-i {
+    cursor: default !important;
+}
+
+.pointer-nonevent {
+    pointer-events: none;
+}
+
+.pr-0 {
+    padding-right: 0;
+}
+
+.pl-0 {
+    padding-left: 0;
+}
+
 .flex-4 {
     flex: 4;
 }
@@ -11561,6 +11583,10 @@ textarea.form-control-lg {
     flex: 1;
 }
 
+.margin-0-auto {
+    margin: 0 auto;
+}
+
 .padding-0 {
     padding: 0;
 }
@@ -11570,8 +11596,16 @@ textarea.form-control-lg {
     line-height: 40px;
 }
 
+.line-height-40 {
+    line-height: 40px;
+}
+
 .font-20 {
     font-size: 20pt;
+}
+
+.font-26 {
+    font-size: 26pt;
 }
 
 .display-none {
@@ -11696,4 +11730,90 @@ textarea.form-control-lg {
     position: fixed;
     width: 100%;
     z-index: -100;
+}
+
+.work-description {
+    min-height: 50vh !important;
+    width: 100%;
+    height: 100%;
+}
+
+.calender-list-empty {
+    width: 100%;
+    text-align: center;
+    font-size: 12pt;
+}
+
+.calender-card-header {
+    font-size: 12pt;
+    background-color: #DDD;
+}
+
+.calender-card-body {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+}
+
+.calender-card-labels {
+    flex: 1;
+    font-size: 12pt;
+    height: 40px;
+    line-height: 40px;
+    margin-right: 10px;
+}
+
+.calender-card-text {
+    flex: 1;
+    font-size: 20pt;
+    height: 40px;
+    line-height: 40px;
+}
+
+.calender-card-symbols {
+    flex: 1;
+    font-size: 20pt;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.calender-card-splitter {
+    flex: 1;
+    font-size: 20pt;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: -3px;
+}
+
+.mb-10px {
+    margin-bottom: 10px;
+}
+
+.font-13 {
+    font-size: 13pt;
+}
+
+.font-14 {
+    font-size: 14pt;
+}
+
+.dashboard-non-attends {
+    flex: 1;
+    line-height: 40px;
+    height: 40px;
+}
+
+.dashboard-data-basement {
+    display: flex;
+    width: 100%;
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.font-40 {
+    font-size: 40pt;
 }
