--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11262,13 +11262,13 @@ textarea.form-control-lg {
     display: grid !important;
   }
 
-  .d-print-table {
-    display: table !important;
-  }
+    .d-print-table {
+        display: table !important;
+    }
 
-  .d-print-table-row {
-    display: table-row !important;
-  }
+    .d-print-table-row {
+        display: table-row !important;
+    }
 
     .d-print-table-cell {
         display: table-cell !important;
@@ -11287,8 +11287,8 @@ textarea.form-control-lg {
     }
 }
 .card-hover {
-    box-shadow: 0 0 0;
-    transition-duration: 0.1s;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+    transition-duration: 0.4s;
 }
 
 .card-hover:hover {
