--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,8 +10,8 @@
 // BASIC STYLES
 
 .card-hover {
-    box-shadow: 0 0 0;
-    transition-duration: 0.1s;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0);
+    transition-duration: 0.4s;
 }
 
 .card-hover:hover {
