--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -36,12 +36,13 @@
 // COMPONENT STYLES
 
 .card-hover {
+    //box-shadow: 0 0 10px #CCC;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0);
     transition-duration: 0.4s;
 
     &:hover {
-        box-shadow: 0 0 10px #CCC;
-        transition-duration: 0.2s;
+        box-shadow: 0 0 15px #888;
+        transition-duration: 0.05s;
     }
 }
 
