--- a/resources/sass/components/cards/request_card.scss
+++ b/resources/sass/components/cards/request_card.scss
@@ -14,6 +14,11 @@
     top: 0;
 }
 
+.card-header.in-progress, .card-header.approved, .card-header.declined, .card-header.cancelled {
+    margin-left: 100px;
+    font-weight: bold;
+}
+
 .card-header.in-progress::after {
     @extend .request-card-header;
     content: "申請中";
