--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11212,13 +11212,13 @@ textarea.form-control-lg {
     padding-left: 1.5rem !important;
   }
 
-  .ps-xxl-5 {
-    padding-left: 3rem !important;
-  }
+    .ps-xxl-5 {
+        padding-left: 3rem !important;
+    }
 
-  .text-xxl-start {
-    text-align: left !important;
-  }
+    .text-xxl-start {
+        text-align: left !important;
+    }
 
     .text-xxl-end {
         text-align: right !important;
@@ -11327,6 +11327,16 @@ textarea.form-control-lg {
 .card-header.cancelled::after {
     content: "取消";
     background-color: #777;
+}
+
+.request-badge {
+    -webkit-text-stroke: 1px black;
+    text-stroke: 1px black;
+    font-weight: bold;
+    font-size: 16pt;
+    line-height: 10px;
+    margin-top: 6px;
+    position: absolute;
 }
 
 .bg-darken {
@@ -11856,4 +11866,8 @@ textarea.form-control-lg {
 
 .font-40 {
     font-size: 40pt;
+}
+
+.ml-20px {
+    margin-left: 20px;
 }
