--- a/resources/sass/components/cards/request_card.scss
+++ b/resources/sass/components/cards/request_card.scss
@@ -42,3 +42,13 @@
     content: "取消";
     background-color: #777;
 }
+
+.request-badge {
+    -webkit-text-stroke: 1px black;
+    text-stroke: 1px black;
+    font-weight: bold;
+    font-size: 16pt;
+    line-height: 10px;
+    margin-top: 6px;
+    position: absolute;
+}
