--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -112,7 +112,7 @@
     border-style: solid;
     border-color: #666;
     z-index: 10;
-    transform: scale(1.1);
+    transform: scale(1.15);
 }
 
 .sunday {
@@ -410,10 +410,10 @@
 .sidebarBtn {
     cursor: pointer;
     font-size: 1.25rem;
-    margin-top: -6px;
+    margin-top: -1px;
     margin-right: 12px;
     color: #888;
-    transition-duration: 0.4s;
+    transition-duration: 0.0s;
 
     &:hover {
         color: #fff;
@@ -555,4 +555,13 @@
 
 .ml-20px {
     margin-left: 20px;
+}
+
+#sectionTitle3 {
+    opacity: 0.0;
+    position: absolute;
+    transform: translateX(-20px);
+    transition-duration: 0.15s;
+    font-size: 22pt;
+    top: -9px;
 }
