--- a/resources/sass/components/cards/request_card.scss
+++ b/resources/sass/components/cards/request_card.scss
@@ -12,11 +12,17 @@
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
     left: 0;
     top: 0;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.3);
+    margin-top: -0.5px;
 }
 
 .card-header.in-progress, .card-header.approved, .card-header.declined, .card-header.cancelled {
     margin-left: 100px;
     font-weight: bold;
+    border-top-left-radius: 0;
+    margin-top: -0.5px;
 }
 
 .card-header.in-progress::after {
