SP向け表示時のメニューボタンのアニメーションを変更

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -413,7 +413,7 @@
     margin-top: -1px;
     margin-right: 12px;
     color: #888;
-    transition-duration: 0.0s;
+    transition-duration: 0.4s;
 
     &:hover {
         color: #fff;
@@ -560,8 +560,8 @@
 #sectionTitle3 {
     opacity: 0.0;
     position: absolute;
-    transform: translateX(-20px);
-    transition-duration: 0.15s;
+    transform: translateX(-30px) rotate(-45deg);
+    transition-duration: 0.35s;
     font-size: 22pt;
-    top: -9px;
+    top: -10px;
 }
