--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11188,13 +11188,13 @@ textarea.form-control-lg {
     padding-bottom: 1.5rem !important;
   }
 
-  .pb-xxl-5 {
-    padding-bottom: 3rem !important;
-  }
+    .pb-xxl-5 {
+        padding-bottom: 3rem !important;
+    }
 
-  .ps-xxl-0 {
-    padding-left: 0 !important;
-  }
+    .ps-xxl-0 {
+        padding-left: 0 !important;
+    }
 
     .ps-xxl-1 {
         padding-left: 0.25rem !important;
@@ -11735,7 +11735,7 @@ textarea.form-control-lg {
     margin-top: -1px;
     margin-right: 12px;
     color: #888;
-    transition-duration: 0s;
+    transition-duration: 0.4s;
 }
 .sidebarBtn:hover {
     color: #fff;
@@ -11885,8 +11885,8 @@ textarea.form-control-lg {
 #sectionTitle3 {
     opacity: 0;
     position: absolute;
-    transform: translateX(-20px);
-    transition-duration: 0.15s;
+    transform: translateX(-30px) rotate(-45deg);
+    transition-duration: 0.35s;
     font-size: 22pt;
-    top: -9px;
+    top: -10px;
 }
