--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11180,13 +11180,13 @@ textarea.form-control-lg {
     padding-bottom: 0.5rem !important;
   }
 
-  .pb-xxl-3 {
-    padding-bottom: 1rem !important;
-  }
+    .pb-xxl-3 {
+        padding-bottom: 1rem !important;
+    }
 
-  .pb-xxl-4 {
-    padding-bottom: 1.5rem !important;
-  }
+    .pb-xxl-4 {
+        padding-bottom: 1.5rem !important;
+    }
 
     .pb-xxl-5 {
         padding-bottom: 3rem !important;
@@ -11735,15 +11735,12 @@ textarea.form-control-lg {
     margin-top: -1px;
     margin-right: 12px;
     color: #888;
-    transition-duration: 0.4s;
 }
 .sidebarBtn:hover {
     color: #fff;
-    transition-duration: 0.4s;
 }
 
 #sectionTitle2 {
-    transition-duration: 0.2s;
     display: inline-block;
     margin-top: -5px;
 }
@@ -11887,6 +11884,16 @@ textarea.form-control-lg {
     position: absolute;
     transform: translateX(-30px) rotate(-45deg);
     transition-duration: 0.35s;
-    font-size: 22pt;
+    font-size: 23pt;
     top: -10px;
+}
+
+.arrow {
+    width: 13px;
+    height: 13px;
+    border: 2px solid;
+    border-color: #aaa #aaa transparent transparent;
+    transform: rotate(45deg);
+    margin-left: -12px;
+    margin-top: -3px;
 }
