表とカレンダーの表示を改善、カレンダーの表示バグを修正

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11677,22 +11677,32 @@ textarea.form-control-lg {
 }
 
 .attends-row {
-  transition-duration: 0.2s;
-  cursor: pointer;
+    transition-duration: 0.25s;
+    cursor: pointer;
+    color: #222 !important;
 }
+
 .attends-row:hover {
-  transition-duration: 0.05s;
-  box-shadow: 0 0 10px #999;
-  background-color: #0b5ed7;
-  color: #fff;
+    transition-duration: 0.05s;
+    box-shadow: 0 0 10px #999;
+    background-color: #0b5ed7 !important;
+    color: #fff !important;
+}
+
+.attends-row:hover td {
+    color: #fff !important;
+}
+
+.attends-row:hover td span {
+    color: #fff !important;
 }
 
 .width-100 {
-  width: 100px;
+    width: 100px;
 }
 
 .width-100pct {
-  width: 100%;
+    width: 100%;
 }
 
 .width-150 {
